--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ phonenumbers>=8.13.0
 python-dateutil>=2.8.2
 cachetools>=5.3.0
 typing-extensions>=4.7.0
+brotli>=1.1.0
 pytest>=7.4.0
 black>=23.7.0
 isort>=5.12.0
