--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ phonenumbers>=8.13.0
 python-dateutil>=2.8.2
 cachetools>=5.3.0
 typing-extensions>=4.7.0
-brotli>=1.1.0
+urllib3>=2.0.0
+
+brotli>=1.1.0; sys_platform != "win32"
+
 pytest>=7.4.0
+pytest-cov>=4.1.0
 black>=23.7.0
 isort>=5.12.0
-mypy>=1.5.0 
+mypy>=1.5.0
+flake8>=6.0.0 
